Okay big clean up refactor and player turn order in progress. The story submitted by the player before the current player (by joined at) is now distributed in MAKE_CHOICE_VOTING phase. This story is the least likely story in every player composition situation to have been touched by this player because all story writing phases distribute stories to players NEXT in the list instead of previously in the list. Players who do not receive a story this way are now automatically set to done. Introduces a new game phase MAKE_OUTCOME_CHOICE_VOTING which is skipped if the player in MAKE_CHOICE_VOTING selected an option which only has a single submission.
Refactors:
- All of the above logic is now present in the new VotingHelper which needed to be split from the CollaborativeTextHelper to prevent circular logic
- Moved sorting of players and distribution of stories as outcome types into a new class called OutcomeTypeHelper which can be used in both places
- Moved get current encounter logic into GameBoard class and get story at current encounter logic into GameSession itself to prevent errors where new stories get their ids regenerated and to prevent duplicate GameSession retrievals
- Added .outcomes.md to strack what outcomeTypes mean at which game stage
- Moved UUID logic into its own function for Story constructor and am now calling it explicitly when generating new stories to prevent serialization issues which trigger new UUIDs on story.storyId (bugfix)

Next todos:
- Check if all players can be set to done when a vote is placed
- Set playerIds on the story when a vote is submitted
- Retrieve submissions for players in the new MAKE_OUTCOME_CHOICE_VOTING phase (players whose turn it is should get nothing to vote on and other players should get a list of submissions that are connected to the MAKE_CHOICE_VOTING optionId selected)